# c_sort_algorithms

./: CMakeLists.txt  main.c  readme.md  script.sh  sort_everything  task_four.txt  task_one.txt  task_three.txt  task_two.txt
enums/: sort_direction.h  sort_direction.h.gch  sort_type.h  sort_type.h.gch
helpers/: all.h  all.h.gch  check_order.c  initialize_numbers.c  push_to_node.c  show_numbers.c  sort.c
sort_algorithms/: all.h  all.h.gch  bubble_sort.c  insertion_sort.c  merge_sort.c  node_insertion_sort.c  quick_sort.c
structs/: node.h  node.h.gch
tasks/: all.h  all.h.gch  four.c  one.c  three.c  two.c
